<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/common_padding"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enquiries_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/app_black"
        android:layout_gravity="center"
        android:text="@string/enquiries_activity_title"
        android:textSize="@dimen/text_size_large" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:layout_marginTop="@dimen/margin_top" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:minLines="8"
        android:gravity="left|top"
        android:ems="10"
        android:layout_marginTop="@dimen/margin_top" />

    <Button
        android:id="@+id/submit"
        style="@style/NormalButton"
        android:text="@string/btn_submit"
        android:layout_marginTop="@dimen/margin_top" />

</LinearLayout>