<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:textSize="@dimen/text_size_large"
        android:text="@string/main_activity_title"
        android:gravity="center"
        android:textColor="@color/app_black"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/universities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/universities" />

        <Button
            android:id="@+id/colleges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colleges" />

        <Button
            android:id="@+id/polytechnics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/polytechnics" />
    </LinearLayout>

</RelativeLayout>
